# Acolytes

./: .bumpversion.cfg  .gitignore  AGENT-CHAT-SYSTEM-DESIGN.md  AGENT-COMMUNICATION-SYSTEM-DESIGN.md  AGENT-DETECTION-SYSTEM.md  AGENT-INTEGRATION-COMMUNICATION-DESIGN.md  AGENT-ROUTING-EVOLUTION.md  AGENT-TOOLS-OPTIMIZATION.md  AGENTS-ACCESS-DESIGN.md  BREAKTHROUGH-PARALLEL-CLAUDE-SYSTEM.md  CHANGELOG.md  CLAUDE.md  COORDINACION-AGENTES-ANALISIS.md  DEVELOPMENT.md  ESTADO-ACTUAL-PROYECTO.md  FLAGS.md  INFORME-AGENT-OS-ANALYSIS.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  MCP_INSTALLATION_GUIDE.md  PIP_INSTALLATION_FLOW.md  PROMPTS_CORRECTOS.md  PROMPTS_DEFINITIVOS_QUEST.md  README.md  README_FIX.md  REFACTOR_AGENT_MEMORY.md  TEMPLATE-AGENTES-IMPLEMENTADORES.md  TODO-AGENTS.md  TODO_v3.md  TOOLS_UPDATE.md  backend_api_fixed.md  cc-agents-talk.md  check_agent_structure.py  commit-reviewer.md  edit_tools_debug.json  example-mission-lite.md  example-mission.md  example-roadmap.md  example-tech-stack.md  (+8 more)
.claude/: agents-registry.json  hooks.json  settings.json  settings.local.json
.claude/agents/: ClaudeSquad-agents-specialist.md  ClaudeSquad-agents.md  ClaudeSquad-commands-specialist.md  ClaudeSquad-documentation-specialist.md  ClaudeSquad-hooks-specialist.md  ClaudeSquad-knowledge-base.md  ClaudeSquad-mcp-specialist.md  ClaudeSquad-scripts-specialist.md  README.md  agent-creator.md  analyst-business.md  analyst-data-scientist.md  analyst-metrics.md  analyst-requirements.md  analyst-risk.md  analyst-tech-stack.md  analyst-user-research.md  analyst.data.md  analyst.strategic.md  angular-engineer.md  architect-cloud.md  architect-system.md  architecture-engineer.md  audit.compliance.md  audit.security.md  auditor-accessibility.md  auditor-compliance.md  auditor-cost.md  auditor-gdpr.md  auditor-security.md  backend-coordinator.md  backend.api.md  (+159 more)
DOCS/: AGENT-YAML-FINDINGS.md
MEJORAS-INVESTIGACION/: COMPARATIVA-REPOS.md  INTEGRACION-MCP-AVANZADO.md  PLAN-MEJORAS-CLAUDESQUAD.md  PROPUESTA-RENOMBRADO-AGENTES.md  ROADMAP-COMPLETO.md
SESSIONS/: 2025-08-13_08-41-16.md  2025-08-13_11-18-43.md  2025-08-13_20-30-00.md  2025-08-14_15-45-00.md  2025-08-14_17-15-00.md
TODO/: #AGENT-ROUTING-EVOLUTION.md  #AGENT-TOOLS-OPTIMIZATION.md  #BREAKTHROUGH-PARALLEL-CLAUDE-SYSTEM.md  #COMMIT-REVIEWER.md  #FIX-ACOLYTES.md  #JOBS-PR-INTEGRATION.md  #REBRANDING.md  ACOLYTES_AS_MCP.md  GIT_GRAFO_NEURAL.md  INSTALLATION_GUIDE.md  INTENT-and-SEMANTIC_CHAT.md  MCP_INSTALLATION_GUIDE.md  MCP_RECOMMENDATIONS_BY_AGENT.md  MCP_REMOVED.md  VERSION_UPDATE_GUIDE.md  n8n-mcp-config.md  tools.md
acolytes/: MANIFEST.in  README.md  __init__.py  cli.py  pyproject.toml  setup.py
copy/: PREQUEST_20250831_214500.md
docs/: HOW-TO.md  INSTALLATION.md  QUEST.md  SAVE.md
sandbox/: AGENT_CHAT_SYSTEM.md  PREQUEST_AGENT_CHAT_20250901_235900.md  create_agent_chat_table.sql  project.db
(+264 files in other folders)
