[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acolytes"
version = "2.1.0"
description = "Acolytes for Claude Code - Multi-agent system with 60+ specialized AI assistants"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "unmasSk"},
]
maintainers = [
    {name = "unmasSk"},
]
keywords = [
    "claude",
    "ai",
    "agents",
    "automation",
    "development",
    "assistant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "colorama>=0.4",
    "packaging>=21.0",
]

[project.scripts]
acolytes = "acolytes.cli:main"

[project.urls]
Homepage = "https://github.com/unmasSk/acolytes"
Repository = "https://github.com/unmasSk/acolytes"
Issues = "https://github.com/unmasSk/acolytes/issues"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
